--- a/Client/MauiBlazorApp/Pages/MainPage.xaml
+++ b/Client/MauiBlazorApp/Pages/MainPage.xaml
@@ -1,22 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:MauiBlazorApp"
-             x:Class="MauiBlazorApp.MainPage"
-             BackgroundColor="{DynamicResource PageBackgroundColor}">
+<ContentPage
+    x:Class="MauiBlazorApp.MainPage"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:local="clr-namespace:MauiBlazorApp"
+    BackgroundColor="{DynamicResource PageBackgroundColor}">
 
-    <BlazorWebView HostPage="wwwroot/index.html" >
+    <BlazorWebView HostPage="wwwroot/index.html">
         <BlazorWebView.RootComponents>
-            <RootComponent Selector="#app" ComponentType="{x:Type local:Main}" />
+            <RootComponent ComponentType="{x:Type local:Main}" Selector="#app" />
         </BlazorWebView.RootComponents>
     </BlazorWebView>
 
 
-    
+
 
     <!--<WebView Source="https://learn.microsoft.com/dotnet/maui" />
 
-    
+
 
     <iframe width="560" height="315" src="https://www.youtube.com/embed/m8e-FF8MsqU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
 
