--- a/Client/BlazorApp/Pages/Index.razor
+++ b/Client/BlazorApp/Pages/Index.razor
@@ -83,6 +83,7 @@
     </div>
 
 </div>
+
 <div class="search-dropdown">
 
     <div class="dropdown">
@@ -475,11 +476,20 @@ else
                                 </div> *@
                             </div>
                         </td>
-                        <td>@person.Nachname</td>
+                        <td>
+                            @person.Nachname
+                            <button @onclick="(() => DisplayDetails(person.Id))">Show Details</button>
+                        </td>
                         <td>@person.Zwischenname</td>
                         <td>@person.Email</td>
-                        <td>@person.Telefonnummer</td>
-                        <td>@person.Strasse</td>
+                        <td>
+                        @foreach (var telefonnummer in person.PersonNummern)
+                        {
+                            <div>@telefonnummer.TelNummer</div>
+                        }
+                            </td>
+@*                        <td>@person.Telefonnummer</td>
+ *@                       <td>@person.Strasse</td>
                         <td>@person.Hausnummer</td>
                         <td>@person.PLZ</td>
                         <td>@person.Stadt</td>
@@ -506,6 +516,11 @@ else
 
 
 @code {
+
+    private void DisplayDetails(int id)
+    {
+        NavManager.NavigateTo($"/personDisplay/{id}");
+    }
 
     List<PersonModel> _PersonList;
     private string searchText = string.Empty;
@@ -563,7 +578,7 @@ else
                 table.AddCell(new PdfPCell(new Phrase(person.Nachname, smallFont)) { BackgroundColor = (i % 2 == 0 ? evenBgColor : oddBgColor) });
                 table.AddCell(new PdfPCell(new Phrase(person.Zwischenname, smallFont)) { BackgroundColor = (i % 2 == 0 ? evenBgColor : oddBgColor) });
                 table.AddCell(new PdfPCell(new Phrase(person.Email, smallFont)) { BackgroundColor = (i % 2 == 0 ? evenBgColor : oddBgColor) });
-                table.AddCell(new PdfPCell(new Phrase(person.Telefonnummer, smallFont)) { BackgroundColor = (i % 2 == 0 ? evenBgColor : oddBgColor) });
+                table.AddCell(new PdfPCell(new Phrase(person.TelNummer, smallFont)) { BackgroundColor = (i % 2 == 0 ? evenBgColor : oddBgColor) });
                 table.AddCell(new PdfPCell(new Phrase(person.Strasse, smallFont)) { BackgroundColor = (i % 2 == 0 ? evenBgColor : oddBgColor) });
                 table.AddCell(new PdfPCell(new Phrase(person.Hausnummer, smallFont)) { BackgroundColor = (i % 2 == 0 ? evenBgColor : oddBgColor) });
                 table.AddCell(new PdfPCell(new Phrase(person.PLZ.ToString(), smallFont)) { BackgroundColor = (i % 2 == 0 ? evenBgColor : oddBgColor) });
@@ -603,7 +618,7 @@ else
                 nachname = person.Nachname,
                 vorname = person.Vorname,
                 zwischenname = person.Zwischenname,
-                telefonnummer = person.Telefonnummer,
+                telefonnummer = person.TelNummer,
                 eMail = person.Email,
                 strasse = ReplaceUnicodeEscapeSequences(person.Strasse), // Replace Unicode escape sequences
                 hausnummer = person.Hausnummer,
