--- a/Client/BlazorApp/Pages/PersonDisplay.razor
+++ b/Client/BlazorApp/Pages/PersonDisplay.razor
@@ -1,6 +1,6 @@
 ﻿@page "/personDisplay/{id:int}"
-@using MauiBlazorApp.Models
-@using MauiBlazorApp.Services
+@using CommonCode.Models
+@using CommonCode.Services
 @using CurrieTechnologies.Razor.SweetAlert2;
 
 
